--- a/src/web/autocount.css
+++ b/src/web/autocount.css
@@ -7,12 +7,11 @@ body {
 #drop-area {
     height: 100%;
     margin: 0;
-    display: flex;
 }
 
 #counts {
     position: fixed;
-    width: 20%;
+    width: 0px;
     height: 100%;
     background-color: white;
     text-align: left;
@@ -25,21 +24,21 @@ body {
 
 #drawings {
     position: absolute;
-    flex-grow: 1;
 z-index: 1;
 
 }
 
 .page {
+    outline: 1px dotted black;
     position: relative;
-    display: inline-block;
-    vertical-align: middle;
+    margin: 0 auto;
 }
 
 canvas {
     position: absolute;
     top: 0;
     left: 0;
+    opacity: 1;
 }
 
 .svgDiv {
@@ -48,22 +47,20 @@ canvas {
     left: 0;
     opacity: .8;
     margin: 0;
+    opacity: 1;
 }
-
-
 
 use:hover {
     stroke: red;
   }
   
-.dragbar {
+#dragbar {
     background-color: black;
     height: 100%;
     position: fixed;
     top: 0;
-    left: 1%;
     height: 100%;
-    width: .4vw;
+    width: 5px;
     cursor: col-resize;
     opacity: .3;
 }
@@ -78,16 +75,13 @@ use:hover {
 
 .row {
     display: table-row;
-    text-align: center;
     border-bottom: 1px solid blue;
-    margin: 0;
 }
 
 .col {
     display: table-cell;
     text-align: center;
-    padding-left: 0.4vw;
-    padding-right: 0.4vw;
+    padding: .2vw;
     font-size: min(max(5px, 1.25vw), 24px);
 }
 
